Use newer java methods